k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sora-website
  namespace: sora-wbsite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sora-website
  template:
    metadata:
      labels:
        app: sora-website
    spec:
      containers:
        - name: sora-website
          image: 818521988849.dkr.ecr.ap-northeast-2.amazonaws.com/bluerain-gitops-repo:1d75666119d891aa4339b0586bb3268c77afdfb9
          ports:
            - containerPort: 80
