k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sora-website-svc
spec:
  type: ClusterIP
  selector:
    app: sora-website
  ports:
    - port: 80
      targetPort: 80
